# ansible-role-rpimonitor

./: .ansible-lint  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml
templates/: daemon_conf.j2
tests/: test.yml
vars/: main.yml
