[tool.poetry]
name = "ansible-role-rpimonitor"
version = "0.1.0"
description = "Ansible role to install and auto-configure RPi monitor"
authors = ["Marcos Soutullo <marcos.soutullo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.9.6"
ansible-lint = "^4.2.0"
yamllint = "^1.20.0"
molecule = "^3.0.2"
docker = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
